<resources>
    <string name="app_name">Meal Planner</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="analysis">Analysis</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="shopping_list">Shopping list</string>
    <string name="noListMsg_start">No</string>
    <string name="noListMsg_end">defined yet</string>
    <string name="days">days</string>
    <string name="periods">periods</string>
    <string name="plan">plan</string>


    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>

    <string-array name="tabs">
        <item>Periods</item>
        <item>Plan</item>
        <item>Days</item>
        <!--<item>Meals</item>-->
        <!--<item>Dishes</item>-->
        <!--<item>Recipes</item>-->
        <!--<item>Ingredients</item>-->
        <!--<item>Suppliers</item>-->
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
