<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/help"
        android:title="@string/help"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/analysis"
        android:title="@string/analysis"
        android:icon="@drawable/ic_data_usage_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_create_white_24dp"
        android:orderInCategory="10"
        app:showAsAction="always" />
    <item android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_trash_white"
        android:orderInCategory="20"
        app:showAsAction="always" />
    <item android:id="@+id/shopping_list"
        android:title="@string/shopping_list"
        android:icon="@drawable/ic_local_grocery_store_white_24dp"
        android:orderInCategory="30"
        app:showAsAction="always" />
</menu>